--- a/expense_tracker/expense_tracker/pubspec.yaml
+++ b/expense_tracker/expense_tracker/pubspec.yaml
@@ -17,7 +17,10 @@ dependencies:
   google_fonts: 6.2.1
   shared_preferences: 2.2.2
   kiwi: 5.0.1
-  focus_detector: 2.0.1
+  focus_detector: 2.0.1 
+  go_router: 15.2.4
+  flutter_screenutil: 5.9.3
+  flutter_native_splash: 2.4.2
 
 dev_dependencies:
   flutter_test:
