--- a/expense_tracker/expense_tracker/pubspec.yaml
+++ b/expense_tracker/expense_tracker/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   go_router: 15.2.4
   flutter_screenutil: 5.9.3
   flutter_native_splash: 2.4.2
+  system_date_time_format: 1.2.2
 
 dev_dependencies:
   flutter_test:
