--- a/expense_tracker/expense_tracker/pubspec.yaml
+++ b/expense_tracker/expense_tracker/pubspec.yaml
@@ -18,10 +18,11 @@ dependencies:
   shared_preferences: 2.2.2
   kiwi: 5.0.1
   focus_detector: 2.0.1 
-  go_router: 15.2.4
+  go_router: 16.0.0
   flutter_screenutil: 5.9.3
   flutter_native_splash: 2.4.2
   system_date_time_format: 1.2.2
+  font_awesome_flutter: 10.8.0
 
 dev_dependencies:
   flutter_test:
